# vision-factory

./: .gitignore  Dockerfile  README.md  get_logs.py  lambda_function.py  main.py  pyproject.toml  requirements.txt  test_lambda_local.py  test_local.py
.github/workflows/: deploy.yml  fetch_logs.yml  invoke_lambda.yml
cdk/: app.py  cdk.json  dashboard_stack.py
cdk/cdk.out/: VisionFactoryDashboard.assets.json  VisionFactoryDashboard.template.json  manifest.json  tree.json
docs/: ARCHITECTURE_FLOW.md  VISION_PIPELINE_SPEC.md  answer.md  approach_analysis.md
scripts/: list_models.py
tests/: conftest.py  test_client.py  test_converter.py  test_db.py  test_idempotency.py  test_parser.py  test_validator.py
vision_factory/: batch_processor.py  main.py  pipeline.py
vision_factory/assets/: cropper.py  uploader.py
vision_factory/config/: settings.py
vision_factory/extraction/: client.py  parser.py  prompt.py
vision_factory/ingestion/: converter.py
vision_factory/output/: logger.py  models.py  validator.py
vision_factory/state/: db.py  manager.py  schema.sql
